Fix width of distance input field on Firefox

--- a/src/containers/Admin/DistanceEditor/styles.scss
+++ b/src/containers/Admin/DistanceEditor/styles.scss
@@ -18,7 +18,7 @@
         border: none;
         color: $white;
         font-size: 14px;
-        width: auto;
+        width: 3rem;
         border-bottom: 2px solid $coral;
         padding: 0.2rem;
         margin: 0 4px 0 4px;
